[package]
name = "oiio"
version = "0.1.0"
edition = "2021"
description = "High-level OpenImageIO bindings over oiio-sys"
documentation = "https://docs.rs/oiio"
authors = [
    "Scott Wilson <scott@propersquid.com>",
    "David Aguilar <davvid@gmail.com>",
]
license = "Apache-2.0"
keywords = ["graphics", "images", "render", "texture", "vfx"]
categories = ["graphics", "multimedia::images", "rendering::data-formats"]
readme = "README.md"
homepage = "https://github.com/AcademySoftwareFoundation/OpenImageIO"
repository = "https://github.com/AcademySoftwareFoundation/OpenImageIO.git"

[workspace]
members = ["oiio-sys"]

[dependencies]
oiio-sys = { path = "oiio-sys", version = "0.1.0" }
thiserror = "2.0.12"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
